src/scss/themes/fylr/components/_list-view.scss
// * List View & List View Grid

.cui-list-view {
	// border
	--list-view-border-color: #{$table-border-color};
	--list-view-border-width: 0;
	--list-view-background: transparent;
	--list-view-column-border-width: 1px; // ! header columns and inner column MUST be the same width to allow correct column width calculation
	--list-view-row-border-width: 1px;
	// header rows & columns
	--list-view-header-background: transparent; // #{$table-border-color};
	--list-view-header-color: #{$body-color};
	--list-view-header-row-border-color: #{$table-border-color};
	--list-view-header-row-border-width: var(--list-view-row-border-width);
	--list-view-header-column-border-color: #{$table-border-color};
	--list-view-header-column-border-width: var(--list-view-column-border-width); // !
	// inner rows & columns
	--list-view-inner-border-color: #{$table-border-color};
	--list-view-inner-row-border-width: var(--list-view-row-border-width);
	--list-view-inner-row-border-color: var(--list-view-inner-border-color);
	--list-view-inner-row-min-height: #{$list-view-data-height};
	--list-view-inner-column-border-color: transparent; // ! "hide" column border by default by making them transparent, do not set border-width to 0
	--list-view-inner-column-border-width: var(--list-view-column-border-width); // !
	// selected
	--list-view-selected-row-border-width: 0;
	--list-view-selected-row-border-color: transparent;
	--list-view-selected-row-background: var(--brand-color, #{$list-view-selected-row-background});
	// hover
	--list-view-hover-row-background: var(--brand-color, #{$list-view-hover-row-background});


	min-height: 0;
	flex-direction: column;
	// todo: what background color ? cui-pane has 'light' background by default, ListView extends Pane class
	background-color: transparent; // reset from cui-pane
	font-size: $list-view-font-size; // todo
	line-height: $line-height-sm;
	border: var(--list-view-border-width) solid var(--list-view-border-color);

	// todo: add zebra option?

	> .cui-vertical-layout-center {
		flex-shrink: 1;
		display: flex;
		flex-direction: column;
		background-color: var(--list-view-background); // only apply colored background to the center (bottom might contain buttons etc.)

		@include pane-padding-reset(); // we reset padding, because in most cases the padding will be applied by some outer parent (like cui-pane)
	}

	// nested
	.cui-list-view {
		background-color: transparent; // reset
		// margin: $spacer 0; // no margin to keep in line with e.g. input fields
	}

	> .cui-vertical-layout-top > .cui-toolbar,
	> .cui-vertical-layout-bottom > .cui-toolbar {
		padding-left: 0;
		padding-right: 0;
		background-color: transparent;
	}

	// * Special Buttons within list-view

	// Link Button
	.cui-button-href {
		height: $btn-height; // keep alignment in the row
	}
}

// * Body

// outside .cui-list-liew, we can use this in Form too
// <div class="cui-list-view-grid-quadrant cui-lv-tbody">

.cui-lv-tbody {
	display: flex;
	flex-direction: column;
	max-width: 100%;
	min-width: 0;
	// flex-shrink: 1; CONFLICT: overwrites shrink: 0 of quadrant-0 and 2
}

// * Columns

.cui-lv-td {
	display: block;
	width: $list-view-data-width;
	min-height: var(--list-view-inner-row-min-height);

	&:not(.cui-lv-row-move-handle-column):not(.cui-lv-td-rotate-90) {
		min-width: 40px; // make sure the shortest icon-only buttons in the default size are visible in the column
	}
	
	overflow: hidden;
	flex-shrink: 0;
	// flex: 1 0 auto; // won't work when resizing the columns
	box-sizing: content-box;
	padding: $list-view-padding-y $list-view-padding-x;

	&:not(:last-child) {
		border-right: var(--list-view-inner-column-border-width) solid var(--list-view-inner-column-border-color);
	}

	.cui-lv-td {
		max-width: 100%;
		box-sizing: border-box; // ???
	}

	// .cui-lv-td-rotate-90
	// see datamodel > definition
	&-rotate-90 {
		width: 18px;

		.cui-tree-node-spacer {
			display: none;
		}

		> .cui-label-rotate-90 {
			word-wrap: break-word;
			margin-left: 0;
			max-width: none !important;
		}

		.cui-data-field {
			flex-grow: 0;
		}
	}

	&-fill {
		min-height: 0;
	}

	&-max {
		flex-grow: 1;
	}

	.cui-data-field-input {
		flex-grow: 1;
	}

	.cui-button {
		max-width: 100%; // allow button text-overflow ellipsis
	}
}

.cui-lv-th,
.list-view-header-row .cui-lv-td {
	cursor: default;
	line-height: $btn-height-sm; // make the header rows the same height as a toolbar with small buttons
}

// * Rows

// <div class="cui-lv-tr-outer list-view-row">
// 	<div class="cui-lv-tr">...</div>
// </div>

.cui-lv-tr-outer {
	display: flex;
	flex: 0 0 auto;
	min-width: 0;
	outline: none;
	cursor: default;

	// be careful to apply a default select state, it's probably best to do this contextually in the theme
	&.cui-selected {
		> .cui-lv-tr {
			box-shadow: inset 0 0 0 var(--list-view-selected-row-border-width) var(--list-view-selected-row-border-color);
			background-color: var(--list-view-selected-row-background);
		}
	}
}

// * Special Header Row

// <div class="cui-lv-tr-outer list-view-header-row">

.list-view-header-row {
	.cui-lv-tr {
		border-bottom: var(--list-view-header-row-border-width) solid var(--list-view-header-row-border-color);
	}
	
	.cui-lv-td {
		display: flex;
		align-items: flex-end;
		min-height: auto; // reset min-height, so labels appear centered, when they are in fact aligned "flex-end". Flex-end is needed in case the header contains rotate-90

		&:not(:last-child):not(:empty) {
			border-color: var(--list-view-header-column-border-color);
			border-width: var(--list-view-header-column-border-width);
		}

		&.cui-lv-td-rotate-90 {
			overflow: hidden;
			line-height: 1;
		}
	}

	.cui-label {
		font-weight: $headings-font-weight;
	}
}

.cui-lv-tr {
	flex: 1 1 auto;
	display: flex;
}
/* ... */

